[gd_scene load_steps=13 format=3 uid="uid://di71bbsg7rxa0"]

[ext_resource type="Script" path="res://Scripts/Door.gd" id="1_2eu81"]
[ext_resource type="Shader" path="res://Assets/Shaders/DebugWireframe.gdshader" id="2_mg280"]
[ext_resource type="Material" uid="uid://bl3cwqkla5mdv" path="res://Assets/Placeholder/ph_mat_orange.tres" id="2_uuxgq"]
[ext_resource type="Texture2D" uid="uid://cm8vomnsunuli" path="res://Assets/Placeholder/ph_tex_orange.png" id="3_fo6kn"]
[ext_resource type="AudioStream" uid="uid://7bq5wknm2fub" path="res://Assets/Audio/SFX/stone-push-loop.mp3" id="5_l2opy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s64ro"]
resource_local_to_scene = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a435a"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_fo6kn")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_y3aqa"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_a435a")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j35qi"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_mg280")
shader_parameter/frame_color = Color(0.0980392, 0.819608, 0.65098, 1)

[sub_resource type="BoxMesh" id="BoxMesh_56by1"]
resource_local_to_scene = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mt6bf"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_mg280")
shader_parameter/frame_color = Color(0.0823529, 0.372549, 0.74902, 1)

[sub_resource type="BoxMesh" id="BoxMesh_eii0i"]
resource_local_to_scene = true

[node name="Door" type="AnimatableBody3D"]
script = ExtResource("1_2eu81")
display_material = ExtResource("2_uuxgq")
visibility_flags = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_s64ro")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_y3aqa")

[node name="EditorVisualisation" type="Node3D" parent="."]

[node name="StartMesh" type="MeshInstance3D" parent="EditorVisualisation"]
material_override = SubResource("ShaderMaterial_j35qi")
mesh = SubResource("BoxMesh_56by1")

[node name="EndMesh" type="MeshInstance3D" parent="EditorVisualisation"]
material_override = SubResource("ShaderMaterial_mt6bf")
mesh = SubResource("BoxMesh_eii0i")

[node name="OpeningSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_l2opy")
volume_db = -25.0
unit_size = 25.0
pitch_scale = 0.75
bus = &"SFX"
